workspace-sf/force-app/main/default/objects/RemuneracaoMultinivel__c/RemuneracaoMultinivel__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as regras para o pagamento de remuneração multinível</description>
    <label>Remuneração multinível</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remunerações multinível</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>