workspace-sf/force-app/main/default/objects/RemuneracaoMultinivel__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Remunerações multinível</relationshipLabel>
    <relationshipName>RemuneracoesMultinivel</relationshipName>
    <type>Lookup</type>
</CustomField>