workspace-sf/force-app/main/default/objects/RemuneracaoMultinivel__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Conta__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Remunerações multinível</relationshipLabel>
    <relationshipName>RemuneracoesMultinivel</relationshipName>
    <type>Lookup</type>
</CustomField>