workspace-sf/force-app/main/default/objects/RemuneracaoMultinivel__c/fields/Participacao__c.field-meta.xml
<CustomField>
    <fullName>Participacao__c</fullName>
    <label>Participação</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>