workspace-sf/force-app/main/default/objects/RemuneracaoMultinivel__c/fields/ProdutoCanal__c.field-meta.xml
<CustomField>
    <fullName>ProdutoCanal__c</fullName>
    <label>Produto do canal</label>
    <referenceTo>ProdutoCanal__c</referenceTo>
    <relationshipLabel>Remunerações multinível</relationshipLabel>
    <relationshipName>RemuneracoesMultinivel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>