workspace-sf/force-app/main/default/objects/RemuneracaoMultinivel__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nível 1</fullName>
                <default>true</default>
                <label>Nível 1</label>
            </value>
            <value>
                <fullName>Nível 2</fullName>
            </value>
            <value>
                <fullName>Nível 3</fullName>
            </value>
            <value>
                <fullName>Nível 4</fullName>
            </value>
            <value>
                <fullName>Nível 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>